Update BASE_URL env
